--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,16 @@
     <artifactId>amqp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
